--- a/WebApplicationVente/Views/_ViewImports.cshtml
+++ b/WebApplicationVente/Views/_ViewImports.cshtml
@@ -1,1 +1,4 @@
 ﻿@using WebApplicationVente.ViewModels
+@using WebApplicationVente.Models
+@addTagHelper WebApplicationVente.TagHelpers.*, WebApplicationVente
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
