--- a/WebApplicationVente/Views/Shared/_Layout.cshtml
+++ b/WebApplicationVente/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                     <a class="nav-item nav-link active" asp-controller="Produit" asp-action="List">Produit</a>
                     @await Component.InvokeAsync("ShoppingCartSummary")
                     <a class="nav-item nav-link active" asp-controller="Contact" asp-action="Index">Contact</a>
-
+                    bvb
                 </div>
             </div>
         </nav>
