création formulaire Commande

--- a/WebApplicationVente/Views/ShoppingCart/Index.cshtml
+++ b/WebApplicationVente/Views/ShoppingCart/Index.cshtml
@@ -22,3 +22,6 @@
        }
     </tbody>
 </table>
+<div class="text-center">
+    <a class="btn btn-primary" asp-controller="Order" asp-action="CreateOrder">create Order</a>
+</div>
